# f1-data-lakehouse

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
contracts/: fastf1_laps.yml  fastf1_results.yml  fastf1_weather.yml  jolpica_circuits.yml  jolpica_constructors.yml  jolpica_drivers.yml  jolpica_pitstops.yml  jolpica_qualifying.yml  jolpica_results.yml  jolpica_standings.yml  openf1_championship_drivers.yml  openf1_championship_teams.yml  openf1_drivers.yml  openf1_laps.yml  openf1_location.yml  openf1_meetings.yml  openf1_overtakes.yml  openf1_position.yml  openf1_sessions.yml  openf1_stints.yml  openf1_team_radio.yml  openf1_weather.yml
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/seeds/: circuit_crosswalk.csv  constructor_crosswalk.csv  driver_crosswalk.csv  schema.yml  team_colors.csv
docs/: architecture.md  backfill_runbook.md  cost_analysis.md  data_availability.md  era_normalization.md  hitl_ai_workflow.md  metric_definitions.md  security.md  troubleshooting.md
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
wiki/: Architecture.md  Backfill-Guide.md  CI-CD.md  Cost-Management.md  Data-Quality.md  Data-Sources.md  HITL-AI-Workflow.md  Home.md  Infrastructure.md  Pipeline-Overview.md  Roadmap.md  Troubleshooting.md  dbt-Models.md
(+91 files in other folders)
